Bug 1310224 - Cherry-pick 46d12e9a from cubeb. r=kinetik, a=gchang